k8s/ingress/test-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
  labels:
    app: test
spec:
  containers:
  - name: test-container
    image: k8s.gcr.io/echoserver:1.4
    ports:
    - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthy
spec:
  type: ClusterIP
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
